@@ -33,6 +33,7 @@ import org.eclipse.sw360.datahandler.thrift.vendors.Vendor;
 import org.eclipse.sw360.rest.resourceserver.TestHelper;
 import org.eclipse.sw360.rest.resourceserver.attachment.Sw360AttachmentService;
 import org.eclipse.sw360.rest.resourceserver.component.Sw360ComponentService;
+import org.eclipse.sw360.rest.resourceserver.report.SW360ReportService;
 import org.eclipse.sw360.rest.resourceserver.user.Sw360UserService;
 import org.eclipse.sw360.rest.resourceserver.vulnerability.Sw360VulnerabilityService;
 import org.eclipse.sw360.rest.resourceserver.vendor.Sw360VendorService;
@@ -53,12 +54,14 @@ import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilde
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.io.IOException;
+import java.nio.ByteBuffer;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.stream.Collectors;
 
 import static org.mockito.BDDMockito.given;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.restdocs.hypermedia.HypermediaDocumentation.linkWithRel;
@@ -95,6 +98,9 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
     @MockBean
     private Sw360VendorService vendorServiceMock;
 
+    @MockBean
+    private SW360ReportService sw360ReportServiceMock;
+
     private Component angularComponent;
 
     private Component angularTargetComponent;
@@ -106,6 +112,9 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
     private Component sBOMComponent;
     private Attachment sBOMAttachment;
     private RequestSummary requestSummary = new RequestSummary();
+
+    private Release release;
+    private Release release2;
 
     @Before
     public void before() throws TException, IOException {
@@ -168,9 +177,9 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
         angularComponent.setCreatedBy("admin@sw360.org");
         angularComponent.setModifiedBy("admin1@sw360.org");
         angularComponent.setModifiedOn("2016-12-30");
-        angularComponent.setSoftwarePlatforms(new HashSet<>(Arrays.asList("Linux")));
-        angularComponent.setMainLicenseIds(new HashSet<>(Arrays.asList("123")));
-        angularComponent.setSubscribers(new HashSet<>(Arrays.asList("Mari")));
+        angularComponent.setSoftwarePlatforms(new HashSet<>(List.of("Linux")));
+        angularComponent.setMainLicenseIds(new HashSet<>(List.of("123")));
+        angularComponent.setSubscribers(new HashSet<>(List.of("Mari")));
         angularComponent.setWiki("http://wiki.ubuntu.com/");
         angularComponent.setBlog("http://www.javaworld.com/");
         angularComponent.setComponentType(ComponentType.OSS);
@@ -200,9 +209,9 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
         angularTargetComponent.setCreatedBy("admin@sw360.org");
         angularTargetComponent.setModifiedBy("admin1@sw360.org");
         angularTargetComponent.setModifiedOn("2016-12-30");
-        angularTargetComponent.setSoftwarePlatforms(new HashSet<>(Arrays.asList("Linux")));
-        angularTargetComponent.setMainLicenseIds(new HashSet<>(Arrays.asList("123")));
-        angularTargetComponent.setSubscribers(new HashSet<>(Arrays.asList("Mari")));
+        angularTargetComponent.setSoftwarePlatforms(new HashSet<>(List.of("Linux")));
+        angularTargetComponent.setMainLicenseIds(new HashSet<>(List.of("123")));
+        angularTargetComponent.setSubscribers(new HashSet<>(List.of("Mari")));
         angularTargetComponent.setWiki("http://wiki.ubuntu.com/");
         angularTargetComponent.setBlog("http://www.javaworld.com/");
         angularTargetComponent.setComponentType(ComponentType.OSS);
@@ -262,9 +271,9 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
         springComponent.setCreatedBy("jane@sw360.org");
         springComponent.setModifiedBy("User@sw360.org");
         springComponent.setModifiedOn("2016-12-25");
-        springComponent.setSoftwarePlatforms(new HashSet<>(Arrays.asList("Windows")));
-        springComponent.setMainLicenseIds(new HashSet<>(Arrays.asList("222")));
-        springComponent.setSubscribers(new HashSet<>(Arrays.asList("Natan")));
+        springComponent.setSoftwarePlatforms(new HashSet<>(List.of("Windows")));
+        springComponent.setMainLicenseIds(new HashSet<>(List.of("222")));
+        springComponent.setSubscribers(new HashSet<>(List.of("Natan")));
         springComponent.setWiki("http://wiki.ubuntu.com/");
         springComponent.setBlog("http://www.javaworld.com/");
         springComponent.setComponentType(ComponentType.OSS);
@@ -300,6 +309,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                         .setCreatedOn(new SimpleDateFormat("yyyy-MM-dd").format(new Date())));
 
         given(this.componentServiceMock.getComponentsForUser(any())).willReturn(componentList);
+        given(this.sw360ReportServiceMock.getComponentBuffer(any(),anyBoolean())).willReturn(ByteBuffer.allocate(10000));
         given(this.componentServiceMock.getRecentComponents(any())).willReturn(componentList);
         given(this.componentServiceMock.getComponentSubscriptions(any())).willReturn(componentList);
         given(this.componentServiceMock.getMyComponentsForUser(any())).willReturn(componentList);
@@ -328,6 +338,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                         .setComponentType(ComponentType.OSS)
                         .setExternalIds(Collections.singletonMap("component-id-key", "c77321"))
         );
+        given(this.componentServiceMock.countProjectsByComponentId(eq("17653524"), any())).willReturn(2);
 
         given(this.userServiceMock.getUserByEmailOrExternalId("admin@sw360.org")).willReturn(
                 new User("admin@sw360.org", "sw360").setId("123456789"));
@@ -339,7 +350,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
         given(this.vendorServiceMock.getVendorById("vendorId")).willReturn(vendor);
 
         List<Release> releaseList = new ArrayList<>();
-        Release release = new Release();
+        release = new Release();
         release.setId("3765276512");
         release.setName("Angular 2.3.0");
         release.setCpeid("cpe:/a:Google:Angular:2.3.0:");
@@ -351,7 +362,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
         release.setComponentId(springComponent.getId());
         releaseList.add(release);
 
-        Release release2 = new Release();
+        release2 = new Release();
         release2.setId("3765276512");
         release2.setName("Angular 2.3.1");
         release2.setCpeid("cpe:/a:Google:Angular:2.3.1:");
@@ -495,11 +506,8 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
 
         ImportBomRequestPreparation importBomRequestPreparation = new ImportBomRequestPreparation();
         importBomRequestPreparation.setComponentsName(sBOMComponent.getName());
-        StringBuilder relesaeName = new StringBuilder();
-        relesaeName.append(release1.getName());
-        relesaeName.append(" ");
-        relesaeName.append(release1.getVersion());
-        importBomRequestPreparation.setReleasesName(relesaeName.toString());
+        String releaseName = release1.getName() + " " + release1.getVersion();
+        importBomRequestPreparation.setReleasesName(releaseName);
 
         given(this.componentServiceMock.prepareImportSBOM(any(),any())).willReturn(importBomRequestPreparation);
         given(this.componentServiceMock.importSBOM(any(),any())).willReturn(requestSummary);
@@ -594,9 +602,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
 
                                 subsectionWithPath("_embedded.sw360:components.[]operatingSystems").description("The OS on which the component operates"),
                                 subsectionWithPath("_embedded.sw360:components.[]mailinglist").description("Component mailing lists"),
-                                subsectionWithPath("_embedded.sw360:components.[]setVisbility").description("The visibility of the component"),
 
-                                subsectionWithPath("_embedded.sw360:components.[]setBusinessUnit").description("The business unit this component belongs to"),
                                 subsectionWithPath("_embedded.sw360:components.[]_links").description("Self <<resources-index-links,Links>> to Component resource").optional(),
                                 subsectionWithPath("_embedded.sw360:components.[]_embedded.sw360:moderators").description("An array of all component moderators with email").optional(),
                                 subsectionWithPath("_embedded.sw360:components.[]_embedded.sw360:releases").description("An array of all releases").optional(),
@@ -674,6 +680,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                                 subsectionWithPath("_embedded.sw360:projects.[]version").description("The project version"),
                                 subsectionWithPath("_embedded.sw360:projects.[]projectType").description("The project type, possible values are: " + Arrays.asList(ProjectType.values())),
                                 subsectionWithPath("_embedded.sw360:projects").description("An array of <<resources-projects, Projects resources>>"),
+                                subsectionWithPath("_embedded.sw360:restrictedResources.[]projects").description("Number of restricted projects"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources")
                         )));
     }
@@ -777,8 +784,6 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                                 subsectionWithPath("_embedded.sw360:vendors").description("An array of all component vendors with full name and link to their <<resources-vendor-get,Vendor resource>>"),
                                 subsectionWithPath("_embedded.sw360:attachments").description("An array of all component attachments and link to their <<resources-attachment-get,Attachment resource>>"),
                                 fieldWithPath("visbility").description("The visibility type of the component"),
-                                fieldWithPath("setVisbility").description("The visibility of the component"),
-                                fieldWithPath("setBusinessUnit").description("Whether or not a business unit is set for the component"),
                                 fieldWithPath("mainLicenseIds").description("Main license ids of component"),
                                 subsectionWithPath("_embedded.defaultVendor").description("Default vendor of component"),
                                 fieldWithPath("defaultVendorId").description("Default vendor id of component")
@@ -816,9 +821,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("createdOn").description("The date the component was created"),
                                 subsectionWithPath("_embedded.createdBy").description("The user who created this component"),
                                 subsectionWithPath("_links").description("<<resources-index-links,Links>> to other resources"),
-                                fieldWithPath("visbility").description("The visibility type of the component"),
-                                fieldWithPath("setVisbility").description("The visibility of the component"),
-                                fieldWithPath("setBusinessUnit").description("Whether or not a business unit is set for the component")
+                                fieldWithPath("visbility").description("The visibility type of the component")
                         )));
     }
 
@@ -894,8 +897,12 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
 
     @Test
     public void should_document_update_component() throws Exception {
-        Component updateComponent = new Component();
+        ComponentDTO updateComponent = new ComponentDTO();
+        AttachmentDTO attachmentDTO = new AttachmentDTO("1231231255", "spring-mvc-4.3.4.RELEASE.jar");
+        Set<AttachmentDTO> attachmentDTOS = new HashSet<>();
+        attachmentDTOS.add(attachmentDTO);
         updateComponent.setName("Updated Component");
+        updateComponent.setAttachmentDTOs(attachmentDTOS);
 
         String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
         mockMvc.perform(patch("/api/components/17653524")
@@ -939,6 +946,7 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("blog").description("The blog of component"),
                                 fieldWithPath("homepage").description("The homepage url of the component"),
                                 fieldWithPath("modifiedOn").description("The date the component was modified"),
+
                                 fieldWithPath("moderators").description("The component moderators"),
 
                                 fieldWithPath("name").description("The updated name of the component"),
@@ -951,11 +959,59 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                                 fieldWithPath("defaultVendorId").description("Default vendor id of component"),
                                 fieldWithPath("categories").description("The component categories"),
                                 fieldWithPath("mailinglist").description("Component mailing lists"),
-                                fieldWithPath("setVisbility").description("The visibility of the component"),
-                                fieldWithPath("setBusinessUnit").description("Whether or not a business unit is set for the component"),
                                 fieldWithPath("vendors").description("The vendors list"),
                                 fieldWithPath("description").description("The updated component description"),
                                 fieldWithPath("componentType").description("The updated  component type, possible values are: " + Arrays.asList(ComponentType.values()))
+                        )));
+    }
+
+    @Test
+    public void should_document_split_components() throws Exception {
+
+
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        Component srcComponent = new Component();
+        srcComponent.setId("17653524");
+        srcComponent.setName("Angular");
+        srcComponent.setComponentOwner("John");
+        srcComponent.setDescription("Angular is a development platform for building mobile and desktop web applications.");
+        List<Release> releaseList = new ArrayList<>();
+        releaseList.add(release);
+        Release release2 = new Release();
+        releaseList.add(release2);
+
+        srcComponent.setReleases(releaseList);
+        Component targetComponent = new Component();
+        targetComponent.setId("87654321");
+        targetComponent.setName("Angular");
+        targetComponent.setComponentOwner("John");
+        targetComponent.setDescription("Angular is a development platform for building mobile and desktop web applications.");
+        targetComponent.setReleases(releaseList);
+        Map<String, Object> componentsMap = new HashMap<>();
+        componentsMap.put("srcComponent", srcComponent);
+        componentsMap.put("targetComponent", targetComponent);
+
+                mockMvc.perform(patch("/api/components/splitComponents")
+                .contentType(MediaTypes.HAL_JSON)
+                .content(this.objectMapper.writeValueAsString(componentsMap))
+                .header("Authorization", "Bearer " + accessToken)
+                .accept(MediaTypes.HAL_JSON))
+                .andExpect(status().isOk())
+                .andDo(this.documentationHandler.document(
+                        requestFields(
+                                fieldWithPath("srcComponent.id").description("The ID of the source component"),
+                                fieldWithPath("srcComponent.name").description("The name of the source component"),
+                                fieldWithPath("srcComponent.description").description("The description of the source component"),
+                                fieldWithPath("srcComponent.type").description("The type of the source component"),
+                                fieldWithPath("srcComponent.componentOwner").description("The owner of the source component"),
+                                fieldWithPath("srcComponent.visbility").description("The visibility of the source component"),
+                                fieldWithPath("targetComponent.id").description("The ID of the target component"),
+                                fieldWithPath("targetComponent.name").description("The name of the target component"),
+                                fieldWithPath("targetComponent.description").description("The description of the target component"),
+                                fieldWithPath("targetComponent.type").description("The type of the target component"),
+                                fieldWithPath("targetComponent.componentOwner").description("The owner of the target component"),
+                                fieldWithPath("targetComponent.visbility").description("The visibility of the target component")
+
                         )));
     }
 
@@ -1122,8 +1178,6 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                         subsectionWithPath("_embedded.sw360:vendors").description("An array of all component vendors with ful name and link to their <<resources-vendor-get,Vendor resource>>"),
                         subsectionWithPath("_embedded.sw360:attachments").description("An array of all component attachments and link to their <<resources-attachment-get,Attachment resource>>"),
                         fieldWithPath("visbility").description("The visibility type of the component"),
-                        fieldWithPath("setVisbility").description("The visibility of the component"),
-                        fieldWithPath("setBusinessUnit").description("Whether or not a business unit is set for the component"),
                         fieldWithPath("mainLicenseIds").description("Main license ids of component"),
                         subsectionWithPath("_embedded.defaultVendor").description("Default vendor of component"),
                         fieldWithPath("defaultVendorId").description("Default vendor id of component")
@@ -1260,5 +1314,48 @@ public class ComponentSpecTest extends TestRestDocsSpecBase {
                 .header("Authorization", "Bearer " + accessToken)
                 .queryParam("type", "SPDX");
         this.mockMvc.perform(builder).andExpect(status().isOk()).andDo(this.documentationHandler.document());
+    }
+
+    @Test
+    public void should_document_get_component_report() throws Exception{
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        mockMvc.perform(get("/api/reports")
+                        .header("Authorization", "Bearer " + accessToken)
+                        .param("withlinkedreleases", "true")
+                        .param("mimetype", "xlsx")
+                        .param("mailrequest", "false")
+                        .param("module", "components")
+                        .accept(MediaTypes.HAL_JSON))
+             .andExpect(status().isOk())
+             .andDo(this.documentationHandler.document(
+                     requestParameters(
+                             parameterWithName("withlinkedreleases").description("Projects with linked releases. Possible values are `<true|false>`"),
+                             parameterWithName("mimetype").description("Projects download format. Possible values are `<xls|xlsx>`"),
+                             parameterWithName("mailrequest").description("Downloading project report requirted mail link. Possible values are `<true|false>`"),
+                             parameterWithName("module").description("module represent the project or component. Possible values are `<components|projects>`")
+                     )));
+    }
+
+    @Test
+    public void should_document_get_component_report_with_mail_req() throws Exception{
+        String accessToken = TestHelper.getAccessToken(mockMvc, testUserId, testUserPassword);
+        mockMvc.perform(get("/api/reports")
+                        .header("Authorization", "Bearer " + accessToken)
+                        .param("withlinkedreleases", "true")
+                        .param("mimetype", "xlsx")
+                        .param("mailrequest", "true")
+                        .param("module", "components")
+                        .accept(MediaTypes.HAL_JSON))
+             .andExpect(status().isOk())
+             .andDo(this.documentationHandler.document(
+                     requestParameters(
+                             parameterWithName("withlinkedreleases").description("components with linked releases. Possible values are `<true|false>`"),
+                             parameterWithName("mimetype").description("components download format. Possible values are `<xls|xlsx>`"),
+                             parameterWithName("module").description("module represent the project or component. Possible values are `<components|projects>`"),
+                             parameterWithName("mailrequest").description("Downloading components report requirted mail link. Possible values are `<true|false>`")
+                     ),responseFields(
+                             subsectionWithPath("response").description("The response message displayed").optional()
+                             )
+                     ));
     }
 }
